<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.SkillActivity">

    <ImageView
        android:id="@+id/back3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/bg3"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/beginnerballerbg" />

    <ImageView
        android:id="@+id/Logo3"
        android:layout_width="131dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back3"
        app:srcCompat="@drawable/swooshlogo"
        android:contentDescription="@string/log" />

    <TextView
        android:id="@+id/Me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/i_am_a"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/acme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Logo3" />

    <LinearLayout
        android:id="@+id/Layout2"
        android:layout_width="362dp"
        android:layout_height="54dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="92dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Me">

        <ToggleButton
            android:id="@+id/Beginnerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/swoosh_toggle"
            android:onClick="onbeginbtnClicked"
            android:text="@string/togglebutton1"
            android:textColor="#FFFFFF"
            android:textOff="@string/beginner2"
            android:textOn="@string/beginner1"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/Ballerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@drawable/swoosh_toggle"
            android:onClick="onballbtnClicked"
            android:text="@string/togglebutton3"
            android:textColor="#FFFFFF"
            android:textOff="@string/baller1"
            android:textOn="@string/baller3"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/Finishbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/swoosh_btn"
        android:onClick="onskillfinishClicked"
        android:text="@string/finish1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/back3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>